objects/LCRM_Account_Merge_UnMerge_Dup_Event__c.object
<CustomObject>
    <description>This object in sfdc is to hold merge/unmerge/duplicate accounts details of GLI.</description>
    <fields>
        <fullName>LCRM_Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Event_Raised_by__c</fullName>
        <label>Event By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merge</fullName>
                </value>
                <value>
                    <fullName>UnMerge</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCRM_GLI_Account_ID_1__c</fullName>
        <label>Source Account ID 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_GLI_Account_ID_2__c</fullName>
        <label>Source Account ID 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_GLI_Contact_ID_1__c</fullName>
        <label>Source Contact ID 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_GLI_Contact_ID_2__c</fullName>
        <label>Source Contact ID 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_Account_ID__c</fullName>
        <label>Destination ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Event</label>
    <nameField>
        <label>Account Event Name1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>